--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -10,7 +10,7 @@ It explains how to set alert destinations as targets, and how to subscribe those
 An example workflow is included below these procedures: see [Example Workflow](#example-workflow-webhook).
 
 <%= vars.platform_name %> users with admin permissions can run event alert commands and subscribe to alerts.
-Admins can configure event alerts using the cf CLI.
+Admins can configure event alerts using the Cloud Foundry CLI.
 
 ##<a id='prerequisite'></a> Prerequisite
 
