--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -52,7 +52,7 @@ The following table provides version and version-support information about <%= v
         <td>November 5, 2019</td>
     </tr>
     <tr>
-        <td>Compatible Pivotal Ops Manager versions</td>
+        <td>Compatible <%= vars.ops_manager_full %> versions</td>
         <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
     </tr>
     <tr>
