Replaced product strings and fixed other style errors [#169876282]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -13,7 +13,7 @@ This documentation describes <%= vars.product_full %>.
 
 ## <a id='overview'></a>Overview
 
-As an admin, you may want to receive notifications about important events that occur on your system.
+As an admin, you might want to receive notifications about important events that occur on your system.
 The <%= vars.product_full %> service gives you the option to set up alerts for a variety of events.
 You can use this service to subscribe to notification topics---notable events that might occur.
 Notification topics are monitored by publishers---<%= vars.platform_name %> components that emit events.
@@ -52,20 +52,20 @@ The following table provides version and version-support information about <%= v
         <td>MMM XX, 2018</td>
     </tr>
     <tr>
-        <td>Compatible Pivotal Ops Manager version(s)</td>
+        <td>Compatible <%= vars.ops_manager_full %> versions</td>
         <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
     </tr>
     <tr>
-        <td>Compatible <%= vars.app_runtime_full %> version(s)</td>
+        <td>Compatible <%= vars.app_runtime_full %> versions</td>
         <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
     </tr>
     <tr>
-        <td>Compatible Pivotal Healthwatch version(s)</td>
+        <td>Compatible Pivotal Healthwatch versions</td>
         <td>1.4 and later</td>
     </tr>
     <tr>
         <td>MySQL</td>
-        <td>MySQL for Pivotal Platform  v2 or MySQL 5.7 and later</td>
+        <td>MySQL for Pivotal Platform v2 or MySQL 5.7 and later</td>
     </tr>
     <tr>
         <td>IaaS support</td>
@@ -75,6 +75,6 @@ The following table provides version and version-support information about <%= v
 
 ## <a id="feedback"></a>Feedback
 
-If you have a feature request, questions, or information about a bug, please email
+If you have a feature request, questions, or information about an issue, please email
 the [<%= vars.platform_name %> Feedback](mailto:pivotal-cf-feedback@pivotal.io) list
 or [pcf-event-alerts@pivotal.io](mailto:pcf-event-alerts@pivotal.io).
