--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -27,4 +27,4 @@ see [Deploy <%= vars.product_full %> Errand Fails](./troubleshooting.html#mysql)
 ## <a id="view"></a> View Release Notes for Another Version
 
 To view the release notes for another product version, select the version from
-the drop-down list at the top of this page.
+the dropdown list at the top of this page.
