--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -6,24 +6,24 @@ owner: Event Alerts
 <strong><%= modified_date %></strong>
 
 This topic describes how to install and configure <%= vars.product_full %>.
-For information on how to use this product, see [Using <%= vars.product_full %>](./using.html).
+For information about how to use this product, see [Using <%= vars.product_full %>](./using.html).
 
 ##<a id='prereqs'></a> Prerequisites
 
-<!-- If the MariaDB issue has not been fixed, add a note under the MySQL for Pivotal Platform  v2 or external MySQL credentials header about the issue. See 1.2 for example. -->
+<!-- If the MariaDB issue has not been fixed, add a note under the MySQL for Pivotal Platform v2 or external MySQL credentials header about the issue. See 1.2 for example. -->
 
-You must have the following in order to install <%= vars.product_full %>:
+You must have the following to install <%= vars.product_short %>:
 
 + <%= vars.app_runtime_full %> v2.1.x or later
-+ MySQL for Pivotal Platform  v2 or credentials for an existing external MySQL database v5.7 or later.
++ MySQL for Pivotal Platform v2 or credentials for an existing external MySQL database v5.7 or later.
   + If binary logging is enabled, the user must have `SUPER` privileges or the global variable `log_bin_trust_function_creators` must be set to `1`.
 + If you want notifications sent to Slack channels, a Slack account
-+ If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the <%= vars.product_full %> tile
++ If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the <%= vars.product_short %> tile
 + Updated and properly configured any BOSH add-ons used in your <%= vars.platform_name %> deployment to support Xenial stemcells. The following add-on versions support the Xenial stemcell:
   + ClamAV Add-on for PCF v1.2.22 and later.
-  For information on how to update this add-on, see [Updating ClamAV Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-antivirus/1-4/updating-for-xenial.html).
-  + File Integrity Monitoring Add-on for PCF v1.4.28 and later. For information on how to update this add-on, see [Updating FIM Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-fim/updating-for-xenial.html).
-  + IPsec Add-on for PCF v1.9.9 and later. For information on how to update this add-on, see [Updating IPsec Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-ipsec/updating-for-xenial.html).
+  For information about how to update this add-on, see [Updating ClamAV Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-antivirus/1-4/updating-for-xenial.html).
+  + File Integrity Monitoring Add-on for PCF v1.4.28 and later. For information about how to update this add-on, see [Updating <%= vars.product_short %> Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-fim/updating-for-xenial.html).
+  + IPsec Add-on for PCF v1.9.9 and later. For information about how to update this add-on, see [Updating IPsec Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-ipsec/updating-for-xenial.html).
 
 ##<a id='install'></a> Download and Install the <%= vars.product_full %> Tile
 
@@ -31,7 +31,7 @@ Follow the procedures below to download and install the <%= vars.product_full %>
 
 1. Download the product file from [Pivotal Network](https://network.pivotal.io/products/p-event-alerts/).
 
-1. Navigate to the Pivotal Ops Manager Installation Dashboard and click **Import a Product** to upload the product file.
+1. Navigate to the <%= vars.ops_manager_full %> Installation Dashboard and click **Import a Product** to upload the product file.
 
 1. Under the **Import a Product** button, click **+** next to the version number of <%= vars.product_full %>.
 This adds the tile to your staging area.
@@ -46,7 +46,7 @@ Follow the procedures below to configure the <%= vars.product_full %> tile.
 
 ### <a id="azs"></a> Configure AZs and Networks
 
-Follow the steps below to choose an Availability Zone (AZ) to run <%= vars.product_full %> and to select networks.
+Follow the steps below to choose an Availability Zone (AZ) to run <%= vars.product_short %> and to select networks.
 
 1. Click the **Assign AZs and Networks** tab.
   ![AZ and Network Assignments Section](images/azs-and-network.png)
@@ -59,15 +59,15 @@ Follow the steps below to choose an Availability Zone (AZ) to run <%= vars.produ
     </tr>
     <tr>
       <td><strong>Place singleton jobs in</strong></td>
-      <td>Select the AZ for executing the <%= vars.product_full %> errands.
-          <%= vars.product_full %> components execute as apps and do not require VMs.</td>
+      <td>Select the AZ for executing the <%= vars.product_short %> errands.
+          <%= vars.product_short %> components execute as apps and do not require VMs.</td>
     </tr>
     <tr><td><strong>Balance other jobs in</strong></td>
         <td>Select any field. This selection has no effect but is required.</td>
     </tr>
     <tr>
       <td><strong>Network</strong></td>
-      <td>Select a subnet for the <%= vars.product_full %> errands.
+      <td>Select a subnet for the <%= vars.product_short %> errands.
           Use the subnet that includes the <%= vars.app_runtime %> component VMs.
       <p class="note"><strong>Note</strong>: The network selected is used only by errand VMs.</p>
       </td>
@@ -77,27 +77,27 @@ Follow the steps below to choose an Availability Zone (AZ) to run <%= vars.produ
 
 ### <a id="event-alerts-alerting-config"></a> (Optional) Configure Scaling Settings
 
-You can scale <%= vars.product_full %> by adding additional instances of the app.
+You can scale <%= vars.product_short %> by adding additional instances of the app.
 Follow the steps below to configure scaling settings.
 
 1. Click the **Scale** tab.
 
-1. In the **<%= vars.product_full %> Instance Count**, set the number of `event-alerts` app instances. Environments with a very large number of
-alerts may need a large number of instances. Environments that do not require high availability
-may scale down to one instance.
+1. In the **<%= vars.product_short %> Instance Count**, set the number of `event-alerts` app instances. Environments with a very large number of
+alerts might need a large number of instances. Environments that do not require high availability
+can scale down to one instance.
 
 1. Click **Save**.
 
 ### <a id="mysql"></a> Configure MySQL Settings
 
-<%= vars.product_full %> can either use the MySQL for Pivotal Platform  v2 service or an external MySQL database.
-To use the MySQL for Pivotal Platform  v2 service, you must have MySQL for Pivotal Platform  v2.0 or later installed.
+<%= vars.product_short %> can either use the MySQL for Pivotal Platform v2 service or an external MySQL database.
+To use the MySQL for Pivotal Platform  v2 service, you must have MySQL for Pivotal Platform v2.0 or later installed.
 
 Follow the steps below to configure MySQL settings.
 
 #### Use the MySQL for Pivotal Platform v2 Service
 
-If you have MySQL for Pivotal Platform v2.0 or later installed and want to use it for <%= vars.product_full %>,
+If you have MySQL for Pivotal Platform v2.0 or later installed and want to use it for <%= vars.product_short %>,
 follow the steps below.
 
 1. Click the **MySQL Settings** tab.
@@ -111,7 +111,7 @@ follow the steps below.
 
 <p class="note warning"><strong>Warning:</strong> If your external MySQL database  has binary logging enabled, the user must have <code>SUPER</code> privileges or the global variable <code>log_bin_trust_function_creators</code> must be set to <code>1</code>.</p>
 
-If you want to use an external database for <%= vars.product_full %>, follow the steps below.
+To use an external database for <%= vars.product_short %>, follow the steps below.
 
 1. Click the **MySQL Settings** tab.
 
@@ -136,7 +136,7 @@ If you want to use an external database for <%= vars.product_full %>, follow the
         <td><strong>MySQL Username</strong></td>
         <td>
         Enter the external MySQL database username.<br>
-        The user must have the following privileges for the <%= vars.product_full %> database:
+        The user must have the following privileges for the <%= vars.product_short %> database:
         <code>ALTER</code>, <code>CREATE</code>, <code>DELETE</code>, <code>DROP</code>, <code>INDEX</code>,
         <code>INSERT</code>, <code>LOCK TABLES</code>, <code>REFERENCES</code>, <code>SELECT</code>, and <code>UPDATE</code>.
         <p class="note warning"><strong>Warning</strong>: Do not delete the user that connects to the database.
@@ -148,8 +148,8 @@ If you want to use an external database for <%= vars.product_full %>, follow the
       </tr>
       <tr>
         <td><strong>MySQL Database</strong></td>
-        <td>Enter the external MySQL database name for <%= vars.product_full %> to use.
-        This database must already exist. <%= vars.product_full %> does not create a new database.</td>
+        <td>Enter the external MySQL database name for <%= vars.product_short %> to use.
+        This database must already exist. <%= vars.product_short %> does not create a new database.</td>
       </tr>
       <tr>
         <td><strong>Enable MySQL TLS</strong></td>
@@ -187,7 +187,7 @@ If you want to use an external database for <%= vars.product_full %>, follow the
 
 ### <a id="email_settings"></a> Configure Email Notifications
 
-Follow the steps below to configure settings for Event Alerts email notifications.
+Follow the steps below to configure settings for <%= vars.product_short %> email notifications.
 
 1. Click the **Email Configuration** tab.
 
@@ -216,7 +216,7 @@ Follow the steps below to configure settings for Event Alerts email notification
       <tr>
         <td><strong>SMTP Server Credentials</strong></td>
         <td>The Username and Password for the outgoing email account.
-          <p class="note"><strong>Note: </strong>To connect to a SMTP server without authentication, leave the SMTP
+          <p class="note"><strong>Note:</strong> To connect to a SMTP server without authentication, leave the SMTP
           username and password fields empty.</p>
         </td>
       </tr>
@@ -234,26 +234,26 @@ Follow the steps below to configure settings for Event Alerts email notification
 
 ### <a id="stemcell"></a> Verify Stemcell Version
 
-To verify that you have the correct stemcell version for the Event Alerts tile, do the following:
+To verify that you have the correct stemcell version for the <%= vars.product_full %> tile:
 
 1. Click the **Stemcell** tab.
 
-1. Verify the settings. If <%= vars.product_full %> cannot detect a stemcell TGZ file,
+1. Verify the settings. If <%= vars.product_short %> cannot detect a stemcell TGZ file,
 a message similar to the following appears:
     ![Stemcell Section](images/stemcell-library-xenial.png)
-    If you need to upload a stemcell, do the following:
+    To upload a stemcell, do the following:
       1. Navigate to [Pivotal Network](https://network.pivotal.io/) and click **Stemcells**.
       1. Download the appropriate stemcell version targeted for your IaaS.
       1. Return to the **Stemcell** tab and click **Import Stemcell** to import the downloaded stemcell TGZ file.
-      <p class="note"><strong>Note: </strong> <%= vars.product_full %> v1.2.3 and later require a Xenial stemcell.
-        To download a Xenial stemcell from Pivotal Network, see [Stemcells for <%= vars.platform_name %> (Ubuntu Xenial)](https://network.pivotal.io/products/stemcells-ubuntu-xenial/).</p>
+      <p class="note"><strong>Note:</strong> <%= vars.product_full %> v1.2.3 and later require a Xenial stemcell.
+        To download a Xenial stemcell from Pivotal Network, see <a href="https://network.pivotal.io/products/stemcells-ubuntu-xenial/">Stemcells for <%= vars.platform_name %> (Ubuntu Xenial).</p>
 
 1. Click **Save**.
 
-1. Return to the Ops Manager Installation Dashboard.
+1. Return to the <%= vars.ops_manager %> Installation Dashboard.
 
-1. If you are using Ops Manager v2.3 or later, click **Review Pending Changes**.
-For more information about this Ops Manager page, see [Reviewing Pending Product Changes](https://docs.pivotal.io/pivotalcf/customizing/review-pending-changes.html).
+1. If you are using <%= vars.ops_manager %> v2.3 or later, click **Review Pending Changes**.
+For more information about this <%= vars.ops_manager %> page, see [Reviewing Pending Product Changes](https://docs.pivotal.io/pivotalcf/customizing/review-pending-changes.html).
 
 1. Click **Apply Changes** to install the <%= vars.product_full %> tile.
 
@@ -267,7 +267,7 @@ For general information about Pivotal Healthwatch, see [Pivotal Healthwatch](htt
 
 The plugin is currently only available to admins.
 
-To install the plugin, do the following:
+To install the plugin:
 
 1. Download one of the following files from Pivotal Network, depending on your operating system (OS).
     * `pcf-event-alerts-cli-plugin-OS-binary`
