--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -64,10 +64,10 @@ This section provides information about how to troubleshooting specific errors o
   <%= partial vars.path_to_partials + "/troubleshoot-template", locals: {
 
         id: 'errand-fails',
-        description: 'Deploy Event Alerts<%# Use <%= vars.product_short %> Errand Fails',
+        description: 'Deploy Event Alerts Errand Fails',
         symptom:<<~DESC,
 
-          When you **Apply Changes**, you see in the <%= vars.ops_manager_full %> installation pane that the **Deploy Event Alerts** errand fails with the following error:
+          When you **Apply Changes**, you see in the Ops Manager installation pane that the **Deploy Event Alerts** errand fails with the following error:
 
           <pre class="terminal">
           You do not have the SUPER privilege and
@@ -78,7 +78,7 @@ This section provides information about how to troubleshooting specific errors o
 
         cause:<<~DESC,
 
-          This problem happens when you do not have SUPER privileges and binary logging is enabled. If you do not resolve this issue, <%= vars.product_full %> is not deployed. <br>
+          This problem happens when you do not have SUPER privileges and binary logging is enabled. If you do not resolve this issue, Pivotal Event Alerts is not deployed. <br>
           For information about the above error message,
           see [Stored Program Binary Logging](https://dev.mysql.com/doc/refman/en/stored-programs-logging.html)
           in the open source MySQL documentation.
@@ -92,7 +92,7 @@ This section provides information about how to troubleshooting specific errors o
           2. Do one of the following:
              * In the database, disable binary logging. For information about disabling binary logging, see [The Binary Log](https://dev.mysql.com/doc/refman/en/binary-log.html) in the open source MySQL documentation.
              * In the database, set `log_bin_trust_function_creators` to `1`. For information about `log_bin_trust_function_creators`, see [log&#95;bin&#95;trust&#95;function&#95;creators](https://dev.mysql.com/doc/refman/en/replication-options-binary-log.html#sysvar_log_bin_trust_function_creators) in the open source MySQL documentation.
-          3. In <%= vars.ops_manager %>, **Apply Changes** with the **Deploy Event Alerts** errand checked.
+          3. In Ops Manager, **Apply Changes** with the **Deploy Event Alerts** errand checked.
           DESC
 
 
