Removed product name variable from a partial [#169876282]

--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -88,7 +88,7 @@ This section provides information about how to troubleshooting specific errors o
 
         To solve this issue:
 
-          1. Drop the <%= vars.product_short %> database and re-create it. For information about dropping a database, see [DROP DATABASE Syntax](https://dev.mysql.com/doc/refman/en/drop-database.html) in the open source MySQL documentation.
+          1. Drop the Event Alerts database and re-create it. For information about dropping a database, see [DROP DATABASE Syntax](https://dev.mysql.com/doc/refman/en/drop-database.html) in the open source MySQL documentation.
           2. Do one of the following:
              * In the database, disable binary logging. For information about disabling binary logging, see [The Binary Log](https://dev.mysql.com/doc/refman/en/binary-log.html) in the open source MySQL documentation.
              * In the database, set `log_bin_trust_function_creators` to `1`. For information about `log_bin_trust_function_creators`, see [log&#95;bin&#95;trust&#95;function&#95;creators](https://dev.mysql.com/doc/refman/en/replication-options-binary-log.html#sysvar_log_bin_trust_function_creators) in the open source MySQL documentation.
