--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -32,8 +32,8 @@ For instructions,
 
 This release fixes the following issue:
 
-* <%= vars.product_name %> no longer fails to emit custom metrics on
-Pivotal Application Service v2.5 and later.
+* <%= vars.product_name %> no longer fails to emit from
+ App Metrics and Metric Forwarder on <%= vars.app_runtime_full %> v2.5 and later.
 * <%= vars.product_name %> no longer fails to connect to an external MySQL database
 when the username or password for the database contains special characters.
 
