--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -27,6 +27,9 @@ To monitor the performance of <%= vars.product_short %> or to retrieve troublesh
      This indicates that no custom metrics are being published to the Firehose.
      It does not indicate a problem with the system.</p>
 
+     <p class="note"><strong>Note:</strong> If you are on <%= vars.app_runtime_full %> v2.5 and later,
+       App Metrics and Metric Forwarder fail to emit metrics.</p>
+
 ##<a id="scale"></a> Scale <%= vars.product_short %>
 
 You might need to scale <%= vars.product_short %> to improve performance.
