set snapshot for PASandOM to match PivNet[#170372993]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -53,11 +53,11 @@ The following table provides version and version-support information about <%= v
     </tr>
     <tr>
         <td>Compatible <%= vars.ops_manager_full %> versions</td>
-        <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
+        <td>2.3, 2.4, 2.5, 2.6, 2.7, and 2.8</td>
     </tr>
     <tr>
         <td>Compatible <%= vars.app_runtime_full %> versions</td>
-        <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
+        <td>2.3, 2.4, 2.5, 2.6, 2.7, and 2.8</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Healthwatch versions</td>
