add release dates and update compatible PAS versions
Signed-off-by: Majid Razvi <mrazvi@pivotal.io>

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -49,15 +49,15 @@ The following table provides version and version-support information about <%= v
     </tr>
     <tr>
         <td>Release date</td>
-        <td>November XXX, 2019</td>
+        <td>January 9, 2020</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Ops Manager version(s)</td>
-        <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
+        <td>2.3 and later</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Application Service version(s)</td>
-        <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
+        <td>2.3 and later</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Healthwatch version(s)</td>
