--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -11,7 +11,7 @@ owner: Event Alerts
 
 ##<a id="1-2-10"></a> v1.2.10
 
-**Release Date: November TBD, 2019**
+**Release Date: January 9, 2020**
 
 ### <a id="features1210"></a> Features
 
