fix dud links[#169659031]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -11,7 +11,7 @@ owner: Event Alerts
 
 ##<a id="1-2-10"></a> v1.2.10
 
-**Release Date: January 9, 2020**
+**Release Date: January 10, 2020**
 
 ### <a id="features1210"></a> Features
 
@@ -24,7 +24,7 @@ Slack targets, see [Create Slack Targets](./using.html#slack_targets).
 This enables <%= vars.product_name %> to emit custom app metrics in a structured log format.
 To use this service, you must install the plugin and register the `event-alerts` app as a JSON metrics source.
 For instructions,
-  see [Install the Plugin](https:/_/docs.pivotal.io/platform/application-service/2-7/metric-registrar/using.html#install-plugin)
+  see [Install the Plugin](https://docs.pivotal.io/platform/application-service/metric-registrar/using.html#install-plugin)
   and [Register a Structured Log Format](https://docs.pivotal.io/platform/application-service/metric-registrar/using.html#register-
   log-format) in _Using Metric Registrar_.
 
