--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -20,7 +20,7 @@ To monitor the performance of <%= vars.product_short %> or to retrieve troublesh
   For more information, see [Pivotal App Metrics](https://docs.pivotal.io/app-metrics/index.html).
 * Use the Pivotal Metrics Registrar service. To use this service, you must install the plugin
   and register the `event-alerts` app as a JSON metrics source. For instructions,
-  see [Install the Plugin](https:/_/docs.pivotal.io/platform/application-service/2-7/metric-registrar/using.html#install-plugin)
+  see [Install the Plugin](https://docs.pivotal.io/platform/application-service/metric-registrar/using.html#install-plugin)
   and [Register a Structured Log Format](https://docs.pivotal.io/platform/application-service/metric-registrar/using.html#register-log-format)
   in _Using Metric Registrar_.
 * Use the Pivotal Metrics Forwarder service.
