edits and updates[#169659031]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -17,7 +17,7 @@ owner: Event Alerts
 
 New features and changes in this release:
 
-* Removes requirement that Slack webhook URLs contain `slack.com`. This enables admins to create
+* Removes the requirement that Slack webhook URLs contain `slack.com`. This enables admins to create
 Slack targets with webhooks from other messaging platforms. For instructions for creating
 Slack targets, see [Create Slack Targets](./using.html#slack_targets).
 * Adds support for Metric Registrar.
