--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -66,7 +66,7 @@ The following table provides version and version-support information about <%= v
     </tr>
     <tr>
         <td>MySQL</td>
-        <td>MySQL for Pivotal Platform v2 and MySQL 5.7 and later</td>
+        <td>MySQL for Pivotal Platform and MySQL 5.7 and later</td>
     </tr>
     <tr>
         <td>IaaS support</td>
