--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -10,21 +10,16 @@ For information about how to use this product, see [Using <%= vars.product_full 
 
 ##<a id='prereqs'></a> Prerequisites
 
-<!-- If the MariaDB issue has not been fixed, add a note under the MySQL for Pivotal Platform v2 or external MySQL credentials header about the issue. See 1.2 for example. -->
+<!-- If the MariaDB issue has not been fixed, add a note under the MySQL for Pivotal Platform or external MySQL credentials header about the issue. See 1.2 for example. -->
 
 You must have the following to install <%= vars.product_short %>:
 
-+ <%= vars.app_runtime_full %> v2.1.x or later
-+ MySQL for Pivotal Platform v2 or credentials for an existing external MySQL database v5.7 or later.
-  + If you are using MySQL for Pivotal Platform v2, you must configure a single node service plan.
++ <%= vars.app_runtime_full %> v2.3.x or later
++ MySQL for Pivotal Platform or credentials for an existing external MySQL database v5.7 or later.
+  + If you are using MySQL for Pivotal Platform, you must configure a single node service plan.
   + If binary logging is enabled, the user must have `SUPER` privileges or the global variable `log_bin_trust_function_creators` must be set to `1`.
 + If you want notifications sent to Slack channels, a Slack account
 + If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the <%= vars.product_short %> tile
-+ Updated and properly configured any BOSH add-ons used in your <%= vars.platform_name %> deployment to support Xenial stemcells. The following add-on versions support the Xenial stemcell:
-  + ClamAV Add-on for PCF v1.2.22 and later.
-  For information about how to update this add-on, see [Updating ClamAV Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-antivirus/1-4/updating-for-xenial.html).
-  + File Integrity Monitoring Add-on for PCF v1.4.28 and later. For information about how to update this add-on, see [Updating FIM Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-fim/updating-for-xenial.html).
-  + IPsec Add-on for PCF v1.9.9 and later. For information about how to update this add-on, see [Updating IPsec Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-ipsec/updating-for-xenial.html).
 
 ##<a id='install'></a> Download and Install the <%= vars.product_short %> Tile
 
@@ -91,15 +86,15 @@ can scale down to one instance.
 
 ### <a id="mysql"></a> Configure MySQL Settings
 
-<%= vars.product_short %> can either use the MySQL for Pivotal Platform v2 service or an external MySQL database.
-To use the MySQL for Pivotal Platform v2 service, you must have MySQL for Pivotal Platform v2.0 or later installed.
+<%= vars.product_short %> can either use the MySQL for Pivotal Platform service or an external MySQL database.
+To use the MySQL for Pivotal Platform service, you must have MySQL for Pivotal Platform installed.
 
 Follow the steps below to configure MySQL settings.
 
-#### Use the MySQL for Pivotal Platform v2 Service
+#### Use the MySQL for Pivotal Platform Service
 
 
-If you have MySQL for Pivotal Platform v2.0 or later installed and want to use the service:
+If you have MySQL for Pivotal Platform installed and want to use the service:
 
 1. Click **MySQL Settings**.
 
@@ -240,8 +235,6 @@ a message similar to the following appears:
       1. Navigate to [Pivotal Network](https://network.pivotal.io/) and click **Stemcells**.
       1. Download the appropriate stemcell version targeted for your IaaS.
       1. Return to the **Stemcell** tab and click **Import Stemcell** to import the downloaded stemcell TGZ file.
-      <p class="note"><strong>Note: </strong> <%= vars.product_short %> v1.2.3 and later require a Xenial stemcell.
-        To download a Xenial stemcell from Pivotal Network, see <a href="https://network.pivotal.io/products/stemcells-ubuntu-xenial/">Stemcells for <%= vars.platform_name %> Ubuntu Xenial</a>.</p>
 
 1. Click **Save**.
 
