paste in partials [#169739013]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -27,7 +27,7 @@ New features and changes in this release:
     Disregard this message.
     You are still able to authenticate.
 
-<%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
+<%= partial "mariadb-ki" %>
 
 
 ##<a id="1-1-6"></a> v1.1.6
@@ -51,7 +51,7 @@ New features and changes in this release:
     Disregard this message.
     You are still able to authenticate.
 
-<%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
+<%= partial "mariadb-ki" %>
 
 ##<a id="1-1-5"></a> v1.1.5
 
@@ -67,7 +67,7 @@ This release fixes the following issue:
 
 * **[Bug Identified]** When using an external Azure MySQL database or other databases where usernames contain the '@' symbol, authentication will not work. This issue is fixed in PCF Event Alerts 1.1.6.
 
-<%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
+<%= partial "mariadb-ki" %>
 
 ##<a id="1-1-4"></a> v1.1.4
 
@@ -83,7 +83,7 @@ This release fixes the following issue:
 
 * **[Bug Identified]** When using an external Azure MySQL database or other databases where usernames contain the '@' symbol, authenticating will not work. This is fixed in PCF Event Alerts 1.1.6.
 
-<%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
+<%= partial "mariadb-ki" %>
 
 ##<a id="1-1-3"></a> v1.1.3
 
@@ -101,7 +101,7 @@ New features and changes in this release:
 * **[Bug Identified]** Some users are unable to install PCF Event Alerts when the Notifications client requires HTTPS. This issue is fixed in v1.1.4.
 * **[Bug Identified]** When using an external Azure MySQL database or other databases where usernames contain the '@' symbol, authenticating will not work. This is fixed in PCF Event Alerts 1.1.6.
 
-<%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
+<%= partial "mariadb-ki" %>
 
 ##<a id="ver"></a> v1.1.2
 
@@ -117,4 +117,4 @@ Features included in this release:
 
 * **[Bug Identified]** When using an external Azure MySQL database or other databases where usernames contain the '@' symbol, authenticating will not work. This is fixed in PCF Event Alerts 1.1.6.
 
-<%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
+<%= partial "mariadb-ki" %>
