--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -48,7 +48,7 @@ The following table provides version and version-support information about PCF E
         <td>December 14, 2018</td>
     </tr>
     <tr>
-        <td>Compatible <%= vars.ops_manager_full %> versions</td>
+        <td>Compatible Pivotal Ops Manager versions</td>
         <td>2.2 and 2.1</td>
     </tr>
     <tr>
