add ops manager variables [#168528102]

--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -76,7 +76,7 @@ If you do not resolve this issue, <%= vars.product_short %> is not deployed.
 
 #### Symptom
 
-When you **Apply Changes**, you see in the Pivotal Ops Manager installation pane that
+When you **Apply Changes**, you see in the <%= vars.ops_manager_full %> installation pane that
 the **Deploy <%= vars.product_short %>** errand fails with the following error:
 
 <pre class="terminal">
@@ -95,11 +95,12 @@ in the open source MySQL documentation.
 
 To solve this issue:
 
-  1. Drop the <%= vars.product_short %> database and re-create it. For information about dropping a database, see [DROP DATABASE Syntax](https://dev.mysql.com/doc/refman/en/drop-database.html) in the open source MySQL documentation.
+  1. Drop the <%= vars.product_short %> database and re-create it.
+  For information about dropping a database, see [DROP DATABASE Syntax](https://dev.mysql.com/doc/refman/en/drop-database.html) in the open source MySQL documentation.
   2. Do one of the following:
      * In the database, disable binary logging. For information about disabling binary logging, see [The Binary Log](https://dev.mysql.com/doc/refman/en/binary-log.html) in the open source MySQL documentation.
      * In the database, set `log_bin_trust_function_creators` to `1`. For information about `log_bin_trust_function_creators`, see [log\_bin\_trust\_function\_creators](https://dev.mysql.com/doc/refman/en/replication-options-binary-log.html#sysvar_log_bin_trust_function_creators) in the open source MySQL documentation.
-  3. In Ops Manager, **Apply Changes** with the **Deploy <%= vars.product_short %>** errand checked.
+  3. In <%= vars.ops_manager %>, **Apply Changes** with the **Deploy <%= vars.product_short %>** errand checked.
 
 ###<a id="ip-binding"></a> <%= vars.product_short %> Fails to Release IP Address Bindings on MySQL Upgrade
 
