--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -232,7 +232,7 @@ The resulting list is shown in the procedure, [Subscribe to Alert Topics](#subsc
 ##<a id='example-workflow-webhook'></a> Example Workflow: Send all Healthwatch Alerts to a Webhook
 
 In this example workflow, you create a webhook target named `webhook-ops` that has the URL `http://example.com/healthwatch-events/foundation-prod`.
-You then subsribe this target to all alert topics from the publisher `healthwatch`, and you publish a test alert to one of the `healthwatch` topics.
+You then subscribe this target to all alert topics from the publisher `healthwatch`, and you publish a test alert to one of the `healthwatch` topics.
 
 1. Create a webhook target named `webhook-ops`:
 
