--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -246,7 +246,7 @@ a message similar to the following appears:
       1. Download the appropriate stemcell version targeted for your IaaS.
       1. Return to the **Stemcell** tab and click **Import Stemcell** to import the downloaded stemcell TGZ file.
       <p class="note"><strong>Note:</strong> <%= vars.product_full %> v1.2.3 and later require a Xenial stemcell.
-        To download a Xenial stemcell from Pivotal Network, see <a href="https://network.pivotal.io/products/stemcells-ubuntu-xenial/">Stemcells for <%= vars.platform_name %> (Ubuntu Xenial).</p>
+        To download a Xenial stemcell from Pivotal Network, see <a href="https://network.pivotal.io/products/stemcells-ubuntu-xenial/">Stemcells for <%= vars.platform_name %> (Ubuntu Xenial)</a>.</p>
 
 1. Click **Save**.
 
