--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -236,7 +236,7 @@ Follow the steps below to configure settings for <%= vars.product_short %> email
 
 To verify that you have the correct stemcell version for the <%= vars.product_full %> tile:
 
-1. Click the **Stemcell** tab.
+1. From the <%= vars.ops_manager %> Installation Dashboard, click **Stemcell Library**.
 
 1. Verify the settings. If <%= vars.product_short %> cannot detect a stemcell TGZ file,
 a message similar to the following appears:
