--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -14,7 +14,7 @@ For information about how to use this product, see [Using <%= vars.product_full 
 
 You must have the following to install <%= vars.product_short %>:
 
-+ <%= vars.app_runtime_full %> v2.1.x or later
++ <%= vars.app_runtime_full %> (<%= vars.runtime_abbr %>) v2.1.x or later
 + MySQL for Pivotal Platform v2 or credentials for an existing external MySQL database v5.7 or later.
   + If binary logging is enabled, the user must have `SUPER` privileges or the global variable `log_bin_trust_function_creators` must be set to `1`.
 + If you want notifications sent to Slack channels, a Slack account
@@ -68,7 +68,7 @@ Follow the steps below to choose an Availability Zone (AZ) to run <%= vars.produ
     <tr>
       <td><strong>Network</strong></td>
       <td>Select a subnet for the <%= vars.product_short %> errands.
-          Use the subnet that includes the <%= vars.app_runtime %> component VMs.
+          Use the subnet that includes the <%= vars.app_runtime_abbr %> component VMs.
       <p class="note"><strong>Note</strong>: The network selected is used only by errand VMs.</p>
       </td>
     </tr>
