Fixed broken app_runtime_abbr variable [#169412016]

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -14,7 +14,7 @@ For information about how to use this product, see [Using <%= vars.product_full 
 
 You must have the following to install <%= vars.product_short %>:
 
-+ <%= vars.app_runtime_full %> (<%= vars.runtime_abbr %>) v2.1.x or later
++ <%= vars.app_runtime_full %> (<%= vars.app_runtime_abbr %>) v2.1.x or later
 + MySQL for Pivotal Platform v2 or credentials for an existing external MySQL database v5.7 or later.
   + If binary logging is enabled, the user must have `SUPER` privileges or the global variable `log_bin_trust_function_creators` must be set to `1`.
 + If you want notifications sent to Slack channels, a Slack account
