Add upgrade planner partial [#171451456]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -9,6 +9,8 @@ owner: Event Alerts
 
 <%= partial vars.path_to_partials + "/pcf-name-change" %>
 
+<%= partial vars.path_to_partials + "/upgrade-planner" %>
+
 ##<a id="1-2-10"></a> v1.2.10
 
 **Release Date: January 17, 2020**
