Tag images that need alt text [#174360877]

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -38,7 +38,7 @@ This adds the tile to your staging area.
 
 1. Click the newly added **<%= vars.product_full %>** tile to open its configuration panes.
 
-    ![Configuration Panes](images/config-panes-2-1.png)
+    ![Configuration Panes](images/config-panes-2-1.png)<%# Images require alt text that describes the image in detail. %>
 
 ## <a id="config-tile"></a> Configure the Tile
 
@@ -49,7 +49,7 @@ Follow the procedures below to configure the <%= vars.product_full %> tile.
 Follow the steps below to choose an Availability Zone (AZ) to run <%= vars.product_short %> and to select networks.
 
 1. Click the **Assign AZs and Networks** tab.
-  ![AZ and Network Assignments Section](images/azs-and-network.png)
+  ![AZ and Network Assignments Section](images/azs-and-network.png)<%# Images require alt text that describes the image in detail. %>
 
 1. Configure the fields as follows:
   <table class="nice">
@@ -103,7 +103,7 @@ follow the steps below.
 1. Click the **MySQL Settings** tab.
 
 1. Select **Pivotal MySQL Service** and enter the service plan to use. For example, `db-small`.
-  ![MySQL Settings Service Option](images/mysql-settings-service.png)
+  ![MySQL Settings Service Option](images/mysql-settings-service.png)<%# Images require alt text that describes the image in detail. %>
 
 1. Click **Save**.
 
@@ -192,7 +192,7 @@ Follow the steps below to configure settings for <%= vars.product_short %> email
 1. Click the **Email Configuration** tab.
 
 1. Under **SMTP**, select **Enabled**.
-  ![Enable Email](images/email-config-details.png)
+  ![Enable Email](images/email-config-details.png)<%# Images require alt text that describes the image in detail. %>
 
 1. Configure the fields as follows:
 
@@ -240,7 +240,7 @@ To verify that you have the correct stemcell version for the <%= vars.product_fu
 
 1. Verify the settings. If <%= vars.product_short %> cannot detect a stemcell TGZ file,
 a message similar to the following appears:
-    ![Stemcell Section](images/stemcell-library-xenial.png)
+    ![Stemcell Section](images/stemcell-library-xenial.png)<%# Images require alt text that describes the image in detail. %>
     To upload a stemcell, do the following:
       1. Navigate to [Pivotal Network](https://network.pivotal.io/) and click **Stemcells**.
       1. Download the appropriate stemcell version targeted for your IaaS.
