--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -84,7 +84,7 @@ To create a Slack target:
 
 Event alerts to a Slack channel, for example a **Critical Threshold Event** alert and a **Healthy Threshold Event** alert, might appear as follows:
 
-![Sample Slack Alerts](sample-slack-alerts.png)
+![Sample Slack Alerts](sample-slack-alerts.png)<%# Images require alt text that describes the image in detail. %>
 
 ### <a id='webhook_targets'></a> Create Webhook Targets
 
