--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -34,7 +34,7 @@ This adds the tile to your staging area.
 
 1. Click the newly added **<%= vars.product_short %>** tile to open its configuration panes.
 
-    ![Configuration Panes](images/config-panes-2-1.png)
+    ![Configuration Panes](images/config-panes-2-1.png)<%# Images require alt text that describes the image in detail. %>
 
 ## <a id="config-tile"></a> Configure the Tile
 
@@ -45,7 +45,7 @@ Follow the stops below to configure the <%= vars.product_short %> tile.
 Follow the steps below to choose an Availability Zone (AZ) to run <%= vars.product_short %> and to select networks.
 
 1. Click the **Assign AZs and Networks** tab.
-  ![AZ and Network Assignments Section](images/azs-and-network.png)
+  ![AZ and Network Assignments Section](images/azs-and-network.png)<%# Images require alt text that describes the image in detail. %>
 
 1. Configure the fields as follows:
   <table class="nice">
@@ -101,7 +101,7 @@ If you have MySQL for Pivotal Platform installed and want to use the service:
 1. Select **Pivotal MySQL Service**.
 1. Enter the MySQL for Pivotal Platform service plan you want to use.
 The service plan you enter must be a single node plan. For example, `db-small`.
-  ![MySQL Settings Service Option](images/mysql-settings-service.png)
+  ![MySQL Settings Service Option](images/mysql-settings-service.png)<%# Images require alt text that describes the image in detail. %>
 
 1. Click **Save**.
 
@@ -190,7 +190,7 @@ Follow the steps below to configure settings for <%= vars.product_short %> email
 1. Click the **Email Configuration** tab.
 
 1. Under **SMTP**, select **Enabled**.
-  ![Enable Email](images/email-config-details.png)
+  ![Enable Email](images/email-config-details.png)<%# Images require alt text that describes the image in detail. %>
 
 1. Configure the fields as follows:
 
@@ -230,7 +230,7 @@ To verify that you have the correct stemcell version for the <%= vars.product_fu
 
 1. Verify the settings. If <%= vars.product_short %> cannot detect a stemcell TGZ file,
 a message similar to the following appears:
-    ![Stemcell Section](images/stemcell-library-xenial.png)
+    ![Stemcell Section](images/stemcell-library-xenial.png)<%# Images require alt text that describes the image in detail. %>
     If you need to upload a stemcell:
       1. Navigate to [Pivotal Network](https://network.pivotal.io/) and click **Stemcells**.
       1. Download the appropriate stemcell version targeted for your IaaS.
