Add release notes for 1.2.11 [#176040569]
Signed-off-by: Dana Pruitt <dpruitt@vmware.com>

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -11,6 +11,29 @@ owner: Event Alerts
 
 <%= partial vars.path_to_partials + "/upgrade-planner" %>
 
+##<a id="1-2-11"></a> v1.2.11
+
+**Release Date: December 7, 2020**
+
+### <a id="features1211"></a> Features
+
+New features and changes in this release:
+
+* Maintenance update of the following product dependencies:
+    * Product stemcell is now Ubuntu Xenial v621.x
+
+###<a id="known1211"></a> Known Issues
+
+This release has the following issues:
+
+<%= partial vars.path_to_partials + "/eva/deployfails-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
 ##<a id="1-2-10"></a> v1.2.10
 
 **Release Date: January 17, 2020**
