[#176040896]edit rel notes

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -17,10 +17,10 @@ owner: Event Alerts
 
 ### <a id="features1211"></a> Features
 
-New features and changes in this release:
+Change in this release:
 
-* Maintenance update of the following product dependencies:
-    * Product stemcell is now Ubuntu Xenial v621.x
+* **Maintenance update:**
+  Product stemcell updated to Ubuntu Xenial v621.x.
 
 ###<a id="known1211"></a> Known Issues
 
