Add known issue for Tanzu SQL for VMs Communications Link Failure [#176214679]
Signed-off-by: Jeremy Alvis <jalvis@pivotal.io>

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -26,6 +26,8 @@ Change in this release:
 
 This release has the following issues:
 
+<%= partial vars.path_to_partials + "/eva/deployfails-communication-failure-ki" %>
+
 <%= partial vars.path_to_partials + "/eva/deployfails-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
@@ -66,6 +68,8 @@ when the username or password for the database contains special characters.
 
 This release has the following issues:
 
+<%= partial vars.path_to_partials + "/eva/deployfails-communication-failure-ki" %>
+
 <%= partial vars.path_to_partials + "/eva/deployfails-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
@@ -87,6 +91,8 @@ New features and changes in this release:
 ###<a id="known129"></a> Known Issues
 
 This release has the following issues:
+
+<%= partial vars.path_to_partials + "/eva/deployfails-communication-failure-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/deployfails-ki" %>
 
@@ -115,6 +121,8 @@ New features and changes in this release:
 ###<a id="known128"></a> Known Issues
 
 This release has the following issues:
+
+<%= partial vars.path_to_partials + "/eva/deployfails-communication-failure-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/deployfails-ki" %>
 
@@ -153,6 +161,8 @@ and [Subscribe to Alert Topics](./using.html#subscribe_topics).
 
 This release has the following issues:
 
+<%= partial vars.path_to_partials + "/eva/deployfails-communication-failure-ki" %>
+
 <%= partial vars.path_to_partials + "/eva/deployfails-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
@@ -181,6 +191,8 @@ New features and changes in this release:
 ### <a id="known126"></a> Known Issues
 
 This release has the following issues:
+
+<%= partial vars.path_to_partials + "/eva/deployfails-communication-failure-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
 
@@ -218,6 +230,8 @@ of <%= vars.product_short %>. The version numbers now match.
 ### <a id="known125"></a> Known Issues
 
 This release has the following issues:
+
+<%= partial vars.path_to_partials + "/eva/deployfails-communication-failure-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
 
@@ -265,6 +279,8 @@ This release fixes the following issue:
 
 This release has the following issues:
 
+<%= partial vars.path_to_partials + "/eva/deployfails-communication-failure-ki" %>
+
 <%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
 
 * When using <%= vars.product_short %> and BOSH DNS in conjunction with IPSec Add-On for PCF and an internal database,
@@ -305,6 +321,8 @@ New features and changes in this release:
 ### <a id="known121"></a> Known Issues
 
 This release has the following issues:
+
+<%= partial vars.path_to_partials + "/eva/deployfails-communication-failure-ki" %>
 
 * Users of <%= vars.product_short %> v1.2.1 are required to use escape characters in configuration passwords.
   This is no longer required in <%= vars.product_short %> v1.2.3 and later releases.
